--- a/src/components/HireMe/HireMe.css
+++ b/src/components/HireMe/HireMe.css
@@ -86,6 +86,14 @@ a {
   color: var(--fg);
   font-size: 1.1rem;
   border: 2px solid var(--fg);
+  cursor: pointer;
+  outline: none;
+}
+
+.download-cv:hover {
+  color: var(--bg);
+  background-color: var(--fg);
+  transition: background-color .3s ease-in-out, color .3s ease-in-out;
 }
 
 .social {
